# goodbyedpi-linux

./: .dockerignore  CMakeLists.txt  Dockerfile  PKGBUILD  README.md  docker-compose.yml  docker_start.sh  install.sh  uninstall.sh
docs/: DOCKERGUIDE.md
pkg/goodbyedpi-linux/usr/etc/goodbyedpi/: goodbyedpi.conf
pkg/goodbyedpi-linux/usr/lib/systemd/system/: goodbyedpi.service
scripts/: goodbyedpi.service.in  install.sh
src/: main.c
src/capture/: netfilter_capture.c  packet_utils.c  raw_socket.c
src/core/: config.c  logging.c  packet_processor.c
src/evasion/: fake_packets.c  fragmentation.c  header_mangle.c  sni_extractor.c  turkey_specific.c
src/include/: config.h  goodbyedpi.h  logging.h  netfilter_capture.h  packet.h
src/service/: daemon.c  daemon_funcs.c  privileges.c  systemd.c
src/tracking/: conntrack.c  dns_tracker.c  ttl_tracker.c
src/utils/: hash.c  net_utils.c  string_utils.c  uthash.h
